syntax = "proto3";

package lambda;

message GenerateRequest {
  string prompt = 1;
}

message GenerateResponse {
  string generated_text = 1;
}
